--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
         server-addr: localhost:8848
 
     alicloud:
-      access-key: LTAI4G5aaAyWWi9LrZ6jrR1M
-      secret-key: tJTmEIhhCZKF1jVPSH5a0EIbISEOlk
+      access-key: 
+      secret-key: 
       oss:
         endpoint: oss-cn-shanghai.aliyuncs.com
 
